<resources>
    <string name="app_name">Regroup</string>
    <string name="found_count">Found %d places.</string>
    <string name="no_results_found">No results found!</string>
    <string name="search">Search</string>
    <string name="enter_destination_hint">I am looking for…</string>
    <string name="add_location">Add</string>
    <string name="add_location_prompt">Enter up to 5 starting locations with the Add button</string>
    <string name="destination_helper_text">Enter a destination such as \'coffee shop\'</string>
    <string name="destination">Destination</string>
    <string name="begin_search">Begin Search</string>
    <string name="no_locations_found">No locations found!</string>
    <string name="next">Next</string>
    <string name="destination_illustration">Destination Illustration</string>
    <string name="starting_location_illustration">Starting Location Illustration</string>
</resources>